viz value nodes and expressions

--- a/Makemore/NN-and-backpropagation/neural-nets.ipynb
+++ b/Makemore/NN-and-backpropagation/neural-nets.ipynb
@@ -21,15 +21,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import numpy as np\n",
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +50,7 @@
        "44.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +74,7 @@
        "        4.  ,  4.25,  4.5 ,  4.75])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +101,7 @@
        "        37.    ,  42.1875,  47.75  ,  53.6875])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1098b7640>]"
+       "[<matplotlib.lines.Line2D at 0x108c82f40>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -151,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +214,343 @@
     "x = 2/3\n",
     "h = 0.000001\n",
     "print(\"Normalized by h =\", (f(x + h) - f(x)) / h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's get more complex\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d = a*b + c\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 = 4.0\n",
+      "d2 = 3.999699999999999\n",
+      "slope = -3.000000000010772\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = 0.0001\n",
+    "\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d1 = a*b + c\n",
+    "a += h\n",
+    "d2 = a*b + c\n",
+    "\n",
+    "print(\"d1 =\", d1)\n",
+    "print(\"d2 =\", d2)\n",
+    "print(\"slope =\", (d2 - d1) / h)\n",
+    "\n",
+    "# The slope value is actually the value of b. This is proved analytically as well as mathematically through derivation of the equation (derivative of d wrt a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 = 4.0\n",
+      "d2 = 4.0002\n",
+      "slope = 2.0000000000042206\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = 0.0001\n",
+    "\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d1 = a*b + c\n",
+    "b += h\n",
+    "d2 = a*b + c\n",
+    "\n",
+    "print(\"d1 =\", d1)\n",
+    "print(\"d2 =\", d2)\n",
+    "print(\"slope =\", (d2 - d1) / h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 = 4.0\n",
+      "d2 = 4.0001\n",
+      "slope = 0.9999999999976694\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = 0.0001\n",
+    "\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d1 = a*b + c\n",
+    "c += h\n",
+    "d2 = a*b + c\n",
+    "\n",
+    "print(\"d1 =\", d1)\n",
+    "print(\"d2 =\", d2)\n",
+    "print(\"slope =\", (d2 - d1) / h)\n",
+    "# a*b will be constant even if c changes, so its derivative wrt c will be 0\n",
+    "# derivation of d wrt c = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Value:\n",
+    "    def __init__(self, data, _children=(), _op='', label=''):\n",
+    "        self.data = data\n",
+    "        self._prev = set(_children)\n",
+    "        self._op = _op\n",
+    "        self.label = label\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Value(data={self.data})\"\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return Value(self.data + other.data, (self, other), '+')\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        return Value(self.data * other.data, (self, other), '*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d= Value(data=4.0)\n",
+      "d.prev= {Value(data=10.0), Value(data=-6.0)}\n",
+      "d.op= +\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Value(2.0, label='a')\n",
+    "b = Value(-3.0, label='b')\n",
+    "c = Value(10.0, label='c')\n",
+    "e = a*b; e.label = 'e'\n",
+    "d = e + c; d.label = 'd'\n",
+    "print(\"d=\",d)\n",
+    "print(\"d.prev=\",d._prev)\n",
+    "print(\"d.op=\",d._op)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from graphviz import Digraph\n",
+    "\n",
+    "def trace(root):\n",
+    "  # builds a set of all nodes and edges in a graph\n",
+    "  nodes, edges = set(), set()\n",
+    "  def build(v):\n",
+    "    if v not in nodes:\n",
+    "      nodes.add(v)\n",
+    "      for child in v._prev:\n",
+    "        edges.add((child, v))\n",
+    "        build(child)\n",
+    "  build(root)\n",
+    "  return nodes, edges\n",
+    "\n",
+    "def draw_dot(root):\n",
+    "  dot = Digraph(format='svg', graph_attr={'rankdir': 'LR'}) # LR = left to right\n",
+    "  \n",
+    "  nodes, edges = trace(root)\n",
+    "  for n in nodes:\n",
+    "    uid = str(id(n))\n",
+    "    # for any value in the graph, create a rectangular ('record') node for it\n",
+    "    dot.node(name = uid, label = \"{ %s | data %.4f }\" % (n.label, n.data), shape='record')\n",
+    "    if n._op:\n",
+    "      # if this value is a result of some operation, create an op node for it\n",
+    "      dot.node(name = uid + n._op, label = n._op)\n",
+    "      # and connect this node to it\n",
+    "      dot.edge(uid + n._op, uid)\n",
+    "\n",
+    "  for n1, n2 in edges:\n",
+    "    # connect n1 to the op node of n2\n",
+    "    dot.edge(str(id(n1)), str(id(n2)) + n2._op)\n",
+    "\n",
+    "  return dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 12.2.1 (20241206.2353)\n",
+       " -->\n",
+       "<!-- Pages: 1 -->\n",
+       "<svg width=\"578pt\" height=\"127pt\"\n",
+       " viewBox=\"0.00 0.00 578.00 127.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 123)\">\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-123 574,-123 574,4 -4,4\"/>\n",
+       "<!-- 4442942000 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>4442942000</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"233,-82.5 233,-118.5 341.5,-118.5 341.5,-82.5 233,-82.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"244\" y=\"-95.7\" font-family=\"Times,serif\" font-size=\"14.00\">c</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"255,-83 255,-118.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"298.25\" y=\"-95.7\" font-family=\"Times,serif\" font-size=\"14.00\">data 10.0000</text>\n",
+       "</g>\n",
+       "<!-- 4443075440+ -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>4443075440+</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"404.5\" cy=\"-72.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"404.5\" y=\"-67.45\" font-family=\"Times,serif\" font-size=\"14.00\">+</text>\n",
+       "</g>\n",
+       "<!-- 4442942000&#45;&gt;4443075440+ -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>4442942000&#45;&gt;4443075440+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M341.83,-87.48C350.54,-85.37 359.37,-83.22 367.53,-81.24\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"368.16,-84.69 377.05,-78.93 366.51,-77.89 368.16,-84.69\"/>\n",
+       "</g>\n",
+       "<!-- 4443076160 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>4443076160</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"234.12,-27.5 234.12,-63.5 340.38,-63.5 340.38,-27.5 234.12,-27.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"245.12\" y=\"-40.7\" font-family=\"Times,serif\" font-size=\"14.00\">e</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"256.12,-28 256.12,-63.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"298.25\" y=\"-40.7\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;6.0000</text>\n",
+       "</g>\n",
+       "<!-- 4443076160&#45;&gt;4443075440+ -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>4443076160&#45;&gt;4443075440+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M340.82,-57.81C349.88,-59.94 359.11,-62.1 367.6,-64.09\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"366.63,-67.46 377.16,-66.33 368.22,-60.64 366.63,-67.46\"/>\n",
+       "</g>\n",
+       "<!-- 4443076160* -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>4443076160*</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"170\" cy=\"-45.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"170\" y=\"-40.45\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n",
+       "</g>\n",
+       "<!-- 4443076160*&#45;&gt;4443076160 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>4443076160*&#45;&gt;4443076160</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M197.44,-45.5C205.1,-45.5 213.82,-45.5 222.73,-45.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"222.53,-49 232.53,-45.5 222.53,-42 222.53,-49\"/>\n",
+       "</g>\n",
+       "<!-- 4442942240 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>4442942240</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"0,-55.5 0,-91.5 107,-91.5 107,-55.5 0,-55.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"11.38\" y=\"-68.7\" font-family=\"Times,serif\" font-size=\"14.00\">b</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"22.75,-56 22.75,-91.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"64.88\" y=\"-68.7\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;3.0000</text>\n",
+       "</g>\n",
+       "<!-- 4442942240&#45;&gt;4443076160* -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>4442942240&#45;&gt;4443076160*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M107.39,-60.57C116.15,-58.42 125.05,-56.25 133.26,-54.24\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"133.97,-57.67 142.85,-51.89 132.3,-50.87 133.97,-57.67\"/>\n",
+       "</g>\n",
+       "<!-- 4442942288 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>4442942288</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"2.62,-0.5 2.62,-36.5 104.38,-36.5 104.38,-0.5 2.62,-0.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"13.62\" y=\"-13.7\" font-family=\"Times,serif\" font-size=\"14.00\">a</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"24.62,-1 24.62,-36.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"64.5\" y=\"-13.7\" font-family=\"Times,serif\" font-size=\"14.00\">data 2.0000</text>\n",
+       "</g>\n",
+       "<!-- 4442942288&#45;&gt;4443076160* -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>4442942288&#45;&gt;4443076160*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M104.72,-30.34C114.16,-32.57 123.86,-34.86 132.78,-36.96\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"131.94,-40.36 142.48,-39.25 133.55,-33.54 131.94,-40.36\"/>\n",
+       "</g>\n",
+       "<!-- 4443075440 -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>4443075440</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"467.5,-54.5 467.5,-90.5 570,-90.5 570,-54.5 467.5,-54.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"478.88\" y=\"-67.7\" font-family=\"Times,serif\" font-size=\"14.00\">d</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"490.25,-55 490.25,-90.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"530.12\" y=\"-67.7\" font-family=\"Times,serif\" font-size=\"14.00\">data 4.0000</text>\n",
+       "</g>\n",
+       "<!-- 4443075440+&#45;&gt;4443075440 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>4443075440+&#45;&gt;4443075440</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M431.82,-72.5C439.21,-72.5 447.57,-72.5 456.1,-72.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"455.83,-76 465.83,-72.5 455.83,-69 455.83,-76\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Digraph at 0x108d45700>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.environ[\"PATH\"] += os.pathsep + '/opt/homebrew/Cellar/graphviz/12.2.1/bin'\n",
+    "draw_dot(d)"
    ]
   },
   {
