--- a/Opik/2_food_chatflow_traces.ipynb
+++ b/Opik/2_food_chatflow_traces.ipynb
@@ -45,14 +45,34 @@
         "%pip install opik openai litellm --quiet"
       ],
       "metadata": {
-        "id": "RPHuX5YytFLz"
+        "id": "RPHuX5YytFLz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "51d3cf97-65e5-416c-fae6-fb3d8870d48d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m149.3/149.3 kB\u001b[0m \u001b[31m963.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m418.0/418.0 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.0/7.0 MB\u001b[0m \u001b[31m37.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.6/68.6 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m161.7/161.7 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m41.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m55.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.4/65.4 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "HSIDXzU8rrTP"
       },
@@ -80,10 +100,30 @@
         "opik.configure()"
       ],
       "metadata": {
-        "id": "PMUAEgyEtMEO"
+        "id": "PMUAEgyEtMEO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "601fcfdb-1054-45d0-de4d-d040fde832b9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter your Opik API key: ··········\n",
+            "Do you want to use \"rohithmsr\" workspace? (Y/n)Y\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "OPIK: Configuration saved to file: /root/.opik.config\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -96,10 +136,22 @@
         "openai_client = track_openai(client)"
       ],
       "metadata": {
-        "id": "KilkqIqptWw0"
+        "id": "KilkqIqptWw0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bd83c930-fd4f-4cca-8d20-c2bce3f72eac"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter your OpenAI API key: ··········\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -121,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "AUjZawVdrrTQ"
       },
@@ -202,7 +254,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import litellm"
+      ],
+      "metadata": {
+        "id": "BXkBeqVBu5U_"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "zl-C3LLSrrTP"
       },
@@ -215,8 +278,7 @@
         "    self.model = model\n",
         "\n",
         "    if self.client_type == \"openai\":\n",
-        "      self.client = track_openai(openai.OpenAI())\n",
-        "\n",
+        "      self.client = track_openai(OpenAI())\n",
         "    else:\n",
         "      self.client = None\n",
         "\n",
@@ -271,12 +333,12 @@
       "metadata": {
         "id": "1ZqVsuxut3zH"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "S4Cs7tz7rrTQ"
       },
@@ -310,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "YNNuJgRqrrTQ"
       },
@@ -335,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "hIa1nUixrrTQ"
       },
@@ -361,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "5nFkQqGIrrTR"
       },
@@ -397,11 +459,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "8xOEoTqKrrTR"
+        "id": "8xOEoTqKrrTR",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "10918986-4fe0-4e8c-a649-a5d4d71dc480"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "OPIK: Started logging traces to the \"food_chatbot\" project at https://www.comet.com/opik/api/v1/session/redirect/projects/?trace_id=0195c1c0-c995-7d89-ae06-d10da741cc38&path=aHR0cHM6Ly93d3cuY29tZXQuY29tL29waWsvYXBpLw==.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'We might not have a cheeseburger, but we do offer a delicious Mini Cheeseburger for just $6.99—would you like to hear more?'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ],
       "source": [
         "@track\n",
         "def generate_food_chatbot(user_query, menu_items):\n",
@@ -413,6 +501,15 @@
         "\n",
         "generate_food_chatbot(\"What is the price of the cheeseburger?\", menu_items)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vB6SBk0-wMjV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
