--- a/Opik/2_food_chatflow_traces.ipynb
+++ b/Opik/2_food_chatflow_traces.ipynb
@@ -338,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 27,
       "metadata": {
         "id": "S4Cs7tz7rrTQ"
       },
@@ -357,7 +357,7 @@
         "    {menu_items}\n",
         "    +++++\n",
         "\n",
-        "    Step 3: If the item exists in our food menu and the user is requesting specific information, provide that relevant information to the user using the food menu. Make sure to use a friendly tone and keep the response concise.\n",
+        "    Step 3: If the item exists in our food menu (The item may not be specific name. It could be a general term as well. Example: burger in case of Mini Cheeseburger in our menu) and the user is requesting specific information, provide that relevant information to the user using the food menu. Make sure to use a friendly tone and keep the response concise.\n",
         "\n",
         "    Perform the following reasoning steps to send a response to the user:\n",
         "    Step 1: <Step 1 reasoning>\n",
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 28,
       "metadata": {
         "id": "YNNuJgRqrrTQ"
       },
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 29,
       "metadata": {
         "id": "hIa1nUixrrTQ"
       },
@@ -423,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 30,
       "metadata": {
         "id": "5nFkQqGIrrTR"
       },
@@ -459,35 +459,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 35,
       "metadata": {
         "id": "8xOEoTqKrrTR",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
+          "height": 35
         },
-        "outputId": "10918986-4fe0-4e8c-a649-a5d4d71dc480"
+        "outputId": "6b282a9e-520d-47df-a9b6-896f01ce2f10"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "OPIK: Started logging traces to the \"food_chatbot\" project at https://www.comet.com/opik/api/v1/session/redirect/projects/?trace_id=0195c1c0-c995-7d89-ae06-d10da741cc38&path=aHR0cHM6Ly93d3cuY29tZXQuY29tL29waWsvYXBpLw==.\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'We might not have a cheeseburger, but we do offer a delicious Mini Cheeseburger for just $6.99—would you like to hear more?'"
+              "'Here are some delicious plant-based options from our menu: Bruschetta, Veggie Wrap, Vegan Beyond Burger, and Fresh Berry Parfait—enjoy your meal!'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 35
         }
       ],
       "source": [
@@ -499,7 +492,7 @@
         "    verification = verification_step(user_query, refinement, menu_items)\n",
         "    return verification\n",
         "\n",
-        "generate_food_chatbot(\"What is the price of the cheeseburger?\", menu_items)"
+        "generate_food_chatbot(\"Suggest me some of the foods that doesn't use animal products at all\", menu_items)"
       ]
     },
     {
@@ -508,7 +501,7 @@
       "metadata": {
         "id": "vB6SBk0-wMjV"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     }
   ],
