--- a/Opik/3_create_dataset.ipynb
+++ b/Opik/3_create_dataset.ipynb
@@ -47,12 +47,12 @@
       "metadata": {
         "id": "p8aXUc0g3Hvt"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "wwVN4uKz-2vc"
       },
@@ -77,10 +77,29 @@
         "opik.configure()"
       ],
       "metadata": {
-        "id": "7tqZ3ITv3Xot"
+        "id": "7tqZ3ITv3Xot",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb27d12e-fc92-48a4-ac2e-2173e008228a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter your Opik API key: ··········\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "OPIK: Opik is already configured. You can check the settings by viewing the config file at /root/.opik.config\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -107,7 +126,7 @@
       "metadata": {
         "id": "CF8t6pTNCW7t"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -137,10 +156,51 @@
         "experiment.end()"
       ],
       "metadata": {
-        "id": "osGFU3YD7RY9"
+        "id": "osGFU3YD7RY9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49d64d3b-0216-459a-a588-16867e5b33f6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Valid Comet API Key saved in /root/.comet.config (set COMET_CONFIG to change where it is saved).\n",
+            "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m To get all data logged automatically, import comet_ml before the following modules: sklearn.\n",
+            "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m As you are running in a Jupyter environment, you will need to call `experiment.end()` when finished to ensure all metrics and code are logged before exiting.\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Experiment is live on comet.com https://www.comet.com/rohithmsr/foodchatbot-eval/9ce7f386107d42fd8fcb8e9e8465f3b3\n",
+            "\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Couldn't find a Git repository in '/content' nor in any parent directory. Set `COMET_GIT_DIRECTORY` if your Git Repository is elsewhere.\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Artifact 'examples/foodchatbot_eval:2.0.0' download has been started asynchronously\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Still downloading 1 file(s), remaining 7.54 KB/7.54 KB\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Artifact 'examples/foodchatbot_eval:2.0.0' has been successfully downloaded\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m ---------------------------------------------------------------------------------------\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Comet.ml Experiment Summary\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m ---------------------------------------------------------------------------------------\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Data:\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     display_summary_level : 1\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     name                  : odd_food_9538\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     url                   : https://www.comet.com/rohithmsr/foodchatbot-eval/9ce7f386107d42fd8fcb8e9e8465f3b3\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Downloads:\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     artifact assets : 1 (7.54 KB)\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     artifacts       : 1\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Others:\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     notebook_url : https://colab.research.google.com/notebook#fileId=https%3A%2F%2Fgithub.com%2Frohithmsr%2FAI-practice%2Fblob%2Fmain%2FOpik%2F3_create_dataset.ipynb\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m   Uploads:\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     environment details : 1\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     filename            : 1\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     installed packages  : 1\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     notebook            : 2\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     os packages         : 1\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m     source_code         : 1\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m \n",
+            "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m To get all data logged automatically, import comet_ml before the following modules: sklearn.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -157,6 +217,15 @@
       ],
       "metadata": {
         "id": "jDENwjnu8g_l"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BnQ2XxHuuFGb"
       },
       "execution_count": null,
       "outputs": []
