--- a/Opik/4_0_evaluation.ipynb
+++ b/Opik/4_0_evaluation.ipynb
@@ -45,14 +45,37 @@
         "! pip install opik openai comet_ml litellm --quiet"
       ],
       "metadata": {
-        "id": "mDiX7cUYdLiQ"
+        "id": "mDiX7cUYdLiQ",
+        "outputId": "d0d7bf22-cbe5-49b1-fa52-bf42d2b75268",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m149.3/149.3 kB\u001b[0m \u001b[31m1.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m418.0/418.0 kB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m725.8/725.8 kB\u001b[0m \u001b[31m29.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.0/7.0 MB\u001b[0m \u001b[31m62.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.6/68.6 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m35.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m161.7/161.7 kB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m63.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m31.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m43.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.4/65.4 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "5xcX30we92nx"
       },
@@ -83,10 +106,30 @@
         "opik.configure()"
       ],
       "metadata": {
-        "id": "NcJ25mYXdb58"
+        "id": "NcJ25mYXdb58",
+        "outputId": "2c2139f8-4b02-4c78-c3d5-76ef2162d8b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter your Opik API key: ··········\n",
+            "Do you want to use \"rohithmsr\" workspace? (Y/n)Y\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "OPIK: Configuration saved to file: /root/.opik.config\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -96,10 +139,22 @@
         "    os.environ[\"OPENAI_API_KEY\"] = getpass(\"Enter your OpenAI API key: \")"
       ],
       "metadata": {
-        "id": "b7nLcmo70kgD"
+        "id": "b7nLcmo70kgD",
+        "outputId": "025e1843-d2fb-4734-ecc5-d5888c0b1993",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter your OpenAI API key: ··········\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -109,7 +164,7 @@
       "metadata": {
         "id": "Qrp4OjVKdTsI"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -120,7 +175,7 @@
       "metadata": {
         "id": "IT1T_ilrel9J"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -141,7 +196,7 @@
       "metadata": {
         "id": "NjD0upvAlmRN"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -303,7 +358,7 @@
       "metadata": {
         "id": "UddfOiIFe4ja"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -321,43 +376,7 @@
       "metadata": {
         "id": "TP3uUuY9e5jW"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "j0viO7Gqe5hJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "qFrieyPRe5e-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "MWL8el1ve5c1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xWyIaDwIe5Z4"
-      },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -427,7 +446,7 @@
       "metadata": {
         "id": "3rhh1oX6fUTz"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -438,12 +457,12 @@
       "metadata": {
         "id": "w1e6ceRpfZiJ"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "m6s3Rk9u92n0"
       },
@@ -480,7 +499,7 @@
       "metadata": {
         "id": "jd75tlHbf2wg"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -491,7 +510,7 @@
       "metadata": {
         "id": "5V7_qLTaf4EI"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -515,10 +534,77 @@
         ")"
       ],
       "metadata": {
-        "id": "Iro4ybLof6Q2"
+        "id": "Iro4ybLof6Q2",
+        "outputId": "4c23f7e0-2190-4475-8dc0-283d427d12d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 231
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Evaluation:   0%|          | 0/56 [00:00<?, ?it/s]OPIK: Started logging traces to the \"food_chatbot_eval\" project at https://www.comet.com/opik/api/v1/session/redirect/projects/?trace_id=0195c2d2-4495-7160-8f3f-0f1fbf33b597&path=aHR0cHM6Ly93d3cuY29tZXQuY29tL29waWsvYXBpLw==.\n",
+            "Evaluation: 100%|██████████| 56/56 [00:08<00:00,  6.78it/s]\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "╭─ foodchatbot_eval (56 samples) ─╮\n",
+              "│                                 │\n",
+              "│ \u001b[1mTotal time:       \u001b[0m 00:00:08     │\n",
+              "│ \u001b[1mNumber of samples:\u001b[0m 56           │\n",
+              "│                                 │\n",
+              "│ \u001b[1;32mis_json_metric: 0.0000 (avg)\u001b[0m    │\n",
+              "│                                 │\n",
+              "╰─────────────────────────────────╯\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">╭─ foodchatbot_eval (56 samples) ─╮\n",
+              "│                                 │\n",
+              "│ <span style=\"font-weight: bold\">Total time:       </span> 00:00:08     │\n",
+              "│ <span style=\"font-weight: bold\">Number of samples:</span> 56           │\n",
+              "│                                 │\n",
+              "│ <span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">is_json_metric: 0.0000 (avg)</span>    │\n",
+              "│                                 │\n",
+              "╰─────────────────────────────────╯\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Uploading results to Opik \u001b[33m...\u001b[0m \n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Uploading results to Opik <span style=\"color: #808000; text-decoration-color: #808000\">...</span> \n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "View the results \u001b]8;id=36547;https://www.comet.com/opik/api/v1/session/redirect/experiments/?experiment_id=0195c2d2-439e-72d1-bea6-2050442ef180&dataset_id=0195c2b7-9113-7362-8924-6e768285e606&path=aHR0cHM6Ly93d3cuY29tZXQuY29tL29waWsvYXBpLw==\u001b\\in your Opik dashboard\u001b]8;;\u001b\\.\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">View the results <a href=\"https://www.comet.com/opik/api/v1/session/redirect/experiments/?experiment_id=0195c2d2-439e-72d1-bea6-2050442ef180&dataset_id=0195c2b7-9113-7362-8924-6e768285e606&path=aHR0cHM6Ly93d3cuY29tZXQuY29tL29waWsvYXBpLw==\" target=\"_blank\">in your Opik dashboard</a>.\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
